templates routes/new routes/show

--- a/static/src/templates/routes/new.html
+++ b/static/src/templates/routes/new.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12" ng-controller="RouteCtrl">
+    <div class="col-xs-12" ng-controller="RouteNewCtrl">
         <div class="form-group">
             <label for="route_name">Nazwa</label>
             <input type="text" class="form-control" ng-model="route.name" id="route_name">
