--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12" ng-controller="RouteShowCtrl">
         <h1>Trasa</h1>
         <p>Początek: {{route.from}}</p>
         <p ng-repeat="landmark in route.landmarks">- {{landmark.name}}</p>
