--- a/static/src/templates/users/new.html
+++ b/static/src/templates/users/new.html
@@ -9,6 +9,14 @@
             <input type="password" class="form-control" id="password" ng-model="user.auth.password">
         </div>
         <div class="form-group">
+            <label for="first_name">Imię</label>
+            <input type="text" class="form-control" id="first_name" ng-model="user.first_name">
+        </div>
+        <div class="form-group">
+            <label for="second_name">Nazwisko</label>
+            <input type="text" class="form-control" id="second_name" ng-model="user.second_name">
+        </div>
+        <div class="form-group">
             <button class="btn btn-primary" ng-click="submit()">Zapisz</button>
         </div>
     </div>
