--- a/static/src/templates/bikes/main.html
+++ b/static/src/templates/bikes/main.html
@@ -1,6 +1,10 @@
 <!-- Lista rowerów -->
 <div class="row">
     <div class="col-xs-12" ng-controller="BikesCtrl">
+        <div class="jumbotron">
+            <a href="#/bikes/new" class="btn btn-primary btn-block btn-lg">Dodaj nowy</a>
+        </div>
+
         <table class="table table-responsive">
             <tr>
                 <th>Lp</th>
