--- a/static/src/templates/routes/new.html
+++ b/static/src/templates/routes/new.html
@@ -26,7 +26,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td col="2">
+                    <td colspan="2">
                         <button class="btn btn-primary btn-block btn-lg" ng-click="route.landmarks.push({})">Dodaj punkt</button>
                     </td>
                 </tr>
