--- a/static/src/templates/bikes/main.html
+++ b/static/src/templates/bikes/main.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-xs-12" ng-controller="BikesCtrl">
         <div class="jumbotron">
-            <a href="#/bikes/new" class="btn btn-primary btn-block btn-lg">Dodaj nowy</a>
+            <a href="#/bikes/new" class="btn btn-primary btn-block btn-lg">Dodaj nowy rower</a>
         </div>
 
         <table class="table table-responsive">
