--- a/static/src/templates/messages/main.html
+++ b/static/src/templates/messages/main.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12" ng-controller="MessagesCtrl">
         <div class="jumbotron">
-            <a href="#/messages/new" class="btn btn-primary btn-block btn-lg">Dodaj nową</a>
+            <a href="#/messages/new" class="btn btn-primary btn-block btn-lg">Dodaj nową wiadomość</a>
         </div>
 
         <table class="table table-responsive">
