--- a/static/src/templates/routes/main.html
+++ b/static/src/templates/routes/main.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-xs-12" ng-controller="RoutesCtrl">
         <div class="jumbotron">
-            <a href="#/routes/new" class="btn btn-primary btn-block btn-lg">Dodaj nową</a>
+            <a href="#/routes/new" class="btn btn-primary btn-block btn-lg">Dodaj nową trasę</a>
         </div>
 
         <table class="table table-responsive">
