--- a/static/src/templates/desktop/login.html
+++ b/static/src/templates/desktop/login.html
@@ -9,7 +9,8 @@
             <input type="password" id="password" class="form-control" ng-model="password">
         </div>
         <div class="form-group">
-            <button class="btn btn-primary btn-block btn-lg" ng-click="submit()">Zaloguj</button>
+            <button class="btn btn-primary btn-block btn-lg" ng-click="login()">Zaloguj się</button>
+            <button class="btn btn-default btn-block btn-lg" ng-click="register()">Albo zarejestruj</button>
         </div>
         <uib-alert ng-if="alert.msg.length > 0" type="{{alert.type}}">{{alert.msg}}</uib-alert>
     </div>
