--- a/static/src/templates/desktop/login.html
+++ b/static/src/templates/desktop/login.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div ng-contoller="LoginCtrl" class="jumbotron col-md-4 col-md-offset-4">
+    <div ng-controller="LoginCtrl" class="jumbotron col-md-4 col-md-offset-4">
         <div class="form-group">
             <label for="login">Login</label>
-            <input type="text" id="login" class="form-control" ng-model="login">
+            <input type="text" id="username" class="form-control" ng-model="username">
         </div>
         <div class="form-group">
             <label for="password">Hasło</label>
