--- a/static/src/templates/parts/new.html
+++ b/static/src/templates/parts/new.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12" ng-controller="PartsNew">
+    <div class="col-xs-12" ng-controller="PartsNewCtrl">
         <div class="form-group">
             <label for="part_name">Nazwa</label>
             <input type="text" class="form-control" id="part_name" ng-model="part.name">
