--- a/static/src/templates/bikes/main.html
+++ b/static/src/templates/bikes/main.html
@@ -15,7 +15,7 @@
                 <td>{{$index + 1}}.</td>
                 <td>{{bike.name}}</td>
                 <td>
-                    <button class="btn btn-primary">Zobacz</button>
+                    <a ng-href="#/bikes/show/{{bike.ID}}" class="btn btn-primary">Zobacz</a>
                 </td>
             </tr>
         </table>
