--- a/static/src/templates/bikes/show.html
+++ b/static/src/templates/bikes/show.html
@@ -2,12 +2,14 @@
     <div class="col-xs-12" ng-controller="BikesShowCtrl">
         <H2>{{ bike.name }}</H2>
         <p>{{ bike.description }}</p>
-        <div ng-if="bike.parts && bike.parts.length > 0">
+        <div>
             <h4>Zamontowane częsci </h4>
             <p ng-repeat="part in bike.parts">
                 {{part.name}}
             </p>
+            <div>
+                <a ng-href="#/parts/new/{{bike.id}}" class="btn btn-primary">Dodaj część</a>
+            </div>
         </div>
-
     </div>
 </div>
