--- a/static/src/templates/parts/new.html
+++ b/static/src/templates/parts/new.html
@@ -5,8 +5,8 @@
             <input type="text" class="form-control" id="part_name" ng-model="part.name">
         </div>
         <div class="form-group">
-            <label for="part_value">Opis</label>
-            <input type="text" class="form-control" id="part_value" ng-model="part.value">
+            <label for="part_description">Opis</label>
+            <input type="text" class="form-control" id="part_description" ng-model="part.description">
         </div>
         <div class="form-group">
             <button class="btn btn-primary" ng-click="submit()">Zapisz</button>
