--- a/static/src/templates/bikes/show.html
+++ b/static/src/templates/bikes/show.html
@@ -8,7 +8,8 @@
                 {{part.name}}
             </p>
             <div>
-                <a ng-href="#/parts/new/{{bike.ID}}" class="btn btn-primary">Dodaj część</a>
+                <a href="" ng-href="#/bikes/parts/{{bike.ID}}" class="btn btn-info">Dobierz część</a>
+                <a href="" ng-href="#/parts/new/{{bike.ID}}" class="btn btn-primary">Dodaj część</a>
             </div>
         </div>
     </div>
