--- a/static/src/templates/routes/main.html
+++ b/static/src/templates/routes/main.html
@@ -11,6 +11,7 @@
                 <th>Trasa</th>
                 <th>Początek</th>
                 <th>Koniec</th>
+                <th>Akcje</th>
             </tr>
             <tr ng-repeat="route in routes">
                 <td>{{$index + 1}}.</td>
