--- a/static/src/templates/routes/new.html
+++ b/static/src/templates/routes/new.html
@@ -6,11 +6,23 @@
         </div>
         <div class="form-group">
             <label for="route_from">Początek trasy</label>
-            <input type="text" id="route_from" class="form-control" ng-model="route.from">
+            <input type="text" id="route_from" class="form-control" ng-model="route.from_dst">
         </div>
         <div class="form-group">
             <label for="route_to">Koniec trasy</label>
-            <input type="text" id="route_to" class="form-control" ng-model="route.to">
+            <input type="text" id="route_to" class="form-control" ng-model="route.to_dst">
+        </div>
+        <div class="form-group">
+            <label for="route_bike">Rower</label>
+            <select id="route_bike" class="form-control" ng-options="bike.ID as bike.name for bike in bikes" ng-model="route.bike_ID"></select>
+        </div>
+        <div class="form-group">
+            <label for="route_date_of_ride">Data przejazdu</label>
+            <input type="text" id="route_date_of_ride" class="form-control" ng-model="route.date_of_ride">
+        </div>
+        <div class="form-group">
+            <label for="route_duration_of_ride">Czas przejazdu (min)</label>
+            <input type="number" id="route_duration_of_ride" class="form-control" ng-model="route.duration_of_ride">
         </div>
         <div class="form-group">
             <h4>Punkty orientacyjne</h4>
@@ -21,16 +33,19 @@
                 </tr>
                 <tr ng-repeat="landmark in route.landmarks">
                     <td>{{$index + 1}}</td>
-                    <td>
-                        <input type="text" class="form-control" ng-model="landmark.name">
+                    <td ng-init="landmark.order = $index">
+                        <input type="text" class="form-control" ng-model="landmark.value">
                     </td>
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <button class="btn btn-primary btn-block btn-lg" ng-click="route.landmarks.push({})">Dodaj punkt</button>
+                        <button class="btn btn-default btn-block btn-lg" ng-click="route.landmarks.push({})">Dodaj punkt</button>
                     </td>
                 </tr>
             </table>
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary" ng-click="submit()">Zapisz</button>
         </div>
     </div>
 </div>
