--- a/static/src/templates/routes/main.html
+++ b/static/src/templates/routes/main.html
@@ -16,10 +16,10 @@
             <tr ng-repeat="route in routes">
                 <td>{{$index + 1}}.</td>
                 <td>{{route.name}}</td>
-                <td>{{route.from}}</td>
-                <td>{{route.to}}</td>
+                <td>{{route.from_dst}}</td>
+                <td>{{route.to_dst}}</td>
                 <td>
-                    <button class="btn btn-primary">Zobacz</button>
+                    <a class="btn btn-primary" ng-href="#/routes/show/{{route.ID}}">Zobacz</a>
                 </td>
             </tr>
         </table>
