--- a/static/src/templates/routes/new.html
+++ b/static/src/templates/routes/new.html
@@ -33,7 +33,7 @@
                 </tr>
                 <tr ng-repeat="landmark in route.landmarks">
                     <td>{{$index + 1}}</td>
-                    <td ng-init="landmark.order = $index">
+                    <td ng-init="landmark.landmark_order = $index">
                         <input type="text" class="form-control" ng-model="landmark.value">
                     </td>
                 </tr>
