--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -1,8 +1,22 @@
 <div class="row">
     <div class="col-xs-12" ng-controller="RoutesShowCtrl">
-        <h1>Trasa</h1>
-        <p>Początek: {{route.from}}</p>
-        <p ng-repeat="landmark in route.landmarks">- {{landmark.name}}</p>
-        <p>Koniec: {{route.to}}</p>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Trasa</div>
+            <div class="panel-body">
+                <p><strong>Początek:</strong> {{route.from_dst}}</p>
+                <div ng-if="route.landmarks">
+                    <p><strong>Punkty na trasie:</strong></p>
+                    <ol>
+                        <li ng-repeat="landmark in route.landmarks">{{landmark.value}}</li>
+                    </ol>
+                </div>
+                <p><strong>Koniec:</strong> {{route.to_dst}}</p>
+            </div>
+            <div class="panel-footer">
+                <p><strong>Rower</strong> {{route.bike.name}}</p>
+                <p><strong>Data</strong> {{route.date_of_ride}}</p>
+                <p><strong>Czas trwania</strong> {{route.duration_of_ride}} min</p>
+            </div>
+        </div>
     </div>
 </div>
