--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -17,6 +17,28 @@
                 <p><strong>Data</strong> {{route.date_of_ride}}</p>
                 <p><strong>Czas trwania</strong> {{route.duration_of_ride}} min</p>
             </div>
+            <div ng-if="route.comments" class="panel-body">
+                <p><strong>Komentarze:</strong></p>
+                <div>
+                    <div ng-repeat="comment in route.comments">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        username tralala
+                                    </div>
+                                    <div class="col-md-6 text-right">
+                                        {{ comment.date_create }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel-body">
+                                <p>{{comment.value}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
