improved date displaying format in comments

--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -28,7 +28,7 @@
                                         username tralala
                                     </div>
                                     <div class="col-md-6 text-right">
-                                        {{ comment.date_create }}
+                                        {{ comment.date_create | date }}
                                     </div>
                                 </div>
                             </div>
