--- a/static/src/templates/routes/new.html
+++ b/static/src/templates/routes/new.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="route_duration_of_ride">Czas przejazdu [godz: min]</label>
+            <label>Czas przejazdu [godz: min]</label>
             <uib-timepicker ng-model="route.duration_of_ride" hour-step="1" minute-step="1" second-step="1" show-meridian="false"></uib-timepicker>
         </div>
         <div class="form-group">
