Redirecting after adding new route

--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -28,7 +28,7 @@
                                         username tralala
                                     </div>
                                     <div class="col-md-6 text-right">
-                                        {{ comment.date_create | date : 'd MMM H:m' }}
+                                        {{ comment.date_create | date : 'yyyy-MM-d H:m' }}
                                     </div>
                                 </div>
                             </div>
