--- a/static/src/templates/users/edit.html
+++ b/static/src/templates/users/edit.html
@@ -1,20 +1,16 @@
 <div class="row">
-    <div class="col-xs-12" ng-controller="UsersNewCtrl">
+    <div class="col-xs-12" ng-controller="UsersEditCtrl">
         <div class="form-group">
             <label for="login">Nazwa użytkownika</label>
-            <input type="text" class="form-control" id="login" ng-model="user.auth.login">
-        </div>
-        <div class="form-group">
-            <label for="password">Hasło</label>
-            <input type="password" class="form-control" id="password" ng-model="user.auth.password">
+            <input type="text" class="form-control" id="login" ng-model="user._auth_username" ng-disabled="true">
         </div>
         <div class="form-group">
             <label for="first_name">Imię</label>
             <input type="text" class="form-control" id="first_name" ng-model="user.first_name">
         </div>
         <div class="form-group">
-            <label for="second_name">Nazwisko</label>
-            <input type="text" class="form-control" id="second_name" ng-model="user.second_name">
+            <label for="last_name">Nazwisko</label>
+            <input type="text" class="form-control" id="last_name" ng-model="user.last_name">
         </div>
         <div class="form-group">
             <button class="btn btn-primary" ng-click="submit()">Zapisz</button>
