--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -13,3 +13,50 @@ textarea {
 .user-foto {
     border: 1px solid #cccccc;
 }
+
+.container.theme-showcase {
+    background: rgba(255, 255, 255, 0.22);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+}
+
+body.background-1 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-1.jpg) 0 0 no-repeat;
+}
+
+body.background-2 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-2.jpg) 0 0 no-repeat;
+}
+
+body.background-3 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-3.jpg) 0 0 no-repeat;
+}
+
+body.background-4 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-4.jpg) 0 0 no-repeat;
+}
+
+body.background-5 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-5.jpg) 0 0 no-repeat;
+}
+
+body.background-6 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-6.jpg) 0 0 no-repeat;
+}
+
+body.background-7 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-7.jpg) 0 0 no-repeat;
+}
+
+body.background-8 {
+    background-size: cover;
+    background: #fff url(src/images/backgrounds/bike-8.jpg) 0 0 no-repeat;
+}
