--- a/static/src/templates/users/main.html
+++ b/static/src/templates/users/main.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-xs-12" ng-controller="UsersCtrl">
         <div class="row">
-            <div class="col-xs-4 col-md-2"><img src="src/images/user.png" alt="Zdjęcie użytkownika" class="img-responsive user-foto"></div>
+            <div class="col-xs-4 col-md-2"><img src="src/images/user.jpg" alt="Zdjęcie użytkownika" class="img-responsive user-foto"></div>
             <div class="col-xs-8 col-md-10">
                 <div class="panel panel-default">
                     <div class="panel-heading">
