--- a/static/src/templates/bikes/new.html
+++ b/static/src/templates/bikes/new.html
@@ -1,15 +1,17 @@
-<div class="row">
-    <div class="col-xs-12" ng-controller="BikesNewCtrl">
-        <div class="form-group">
-            <label for="name">Nazwa roweru</label>
-            <input type="text" class="form-control" id="name" ng-model="bike.name">
-        </div>
-        <div class="form-group">
-            <label for="description">Opis</label>
-            <input type="text" class="form-control" id="description" ng-model="bike.description">
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" ng-click="submit()">Zapisz</button>
+<form name="BikesNew">
+    <div class="row">
+        <div class="col-xs-12" ng-controller="BikesNewCtrl">
+            <div class="form-group">
+                <label for="name">Nazwa roweru</label>
+                <input type="text" class="form-control" id="name" ng-model="bike.name" validator="required">
+            </div>
+            <div class="form-group">
+                <label for="description">Opis</label>
+                <input type="text" class="form-control" id="description" ng-model="bike.description">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" validation-submit="BikesNew" ng-click="submit()">Zapisz</button>
+            </div>
         </div>
     </div>
-</div>
+</form>
