--- a/static/src/templates/bikes/main.html
+++ b/static/src/templates/bikes/main.html
@@ -16,6 +16,7 @@
                 <td>{{bike.name}}</td>
                 <td>
                     <a ng-href="#/bikes/show/{{bike.ID}}" class="btn btn-primary">Zobacz</a>
+                    <a ng-click="delete(bike.ID)" class="btn btn-danger">Usuń</a>
                 </td>
             </tr>
         </table>
