--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -17,7 +17,7 @@
                 <p><strong>Data</strong> {{route.date_of_ride}}</p>
                 <p><strong>Czas trwania</strong> {{route.duration_of_ride}} min</p>
             </div>
-            <div ng-if="route.comments" class="panel-body">
+            <div class="panel-body">
                 <p><strong>Komentarze:</strong></p>
                 <div>
                     <div ng-repeat="comment in route.comments">
