Bike comments adding works

--- a/static/src/templates/bikes/show.html
+++ b/static/src/templates/bikes/show.html
@@ -16,7 +16,7 @@
         <div class="panel-body">
             <p><strong>Komentarze:</strong></p>
             <div>
-                <div ng-repeat="comment in bike.comments">
+                <div ng-repeat="comment in bike._comments">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="row">
