modified name of viev-only attributes

--- a/static/src/templates/bikes/show.html
+++ b/static/src/templates/bikes/show.html
@@ -4,7 +4,7 @@
         <p>{{ bike.description }}</p>
         <div>
             <h4>Zamontowane częsci </h4>
-            <p ng-repeat="part in bike.parts">
+            <p ng-repeat="part in bike._parts">
                 {{part.name}}
             </p>
             <div>
