--- a/static/src/templates/routes/main.html
+++ b/static/src/templates/routes/main.html
@@ -20,7 +20,7 @@
                 <td>{{route.to_dst}}</td>
                 <td>
                     <a class="btn btn-primary" ng-href="#/routes/show/{{route.ID}}">Zobacz</a>
-                    <a class="btn btn-info" ng-href="#/routes/edit/{{bike.ID}}">Edytuj</a>
+                    <a class="btn btn-info" ng-href="#/routes/edit/{{route.ID}}">Edytuj</a>
                     <a class="btn btn-danger" ng-click="delete(route.ID)">Usuń</a>
                 </td>
             </tr>
