--- a/static/src/templates/bikes/show.html
+++ b/static/src/templates/bikes/show.html
@@ -2,52 +2,54 @@
     <div class="col-xs-12" ng-controller="BikesShowCtrl">
         <H2>{{ bike.name }}</H2>
         <p>{{ bike.description }}</p>
-        <div>
-            <h4>Zamontowane częsci </h4>
-            <p ng-repeat="part in bike._parts">
-                {{part.name}}
-            </p>
-            <div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">Zamontowane częsci </h4>
+            </div>
+            <div class="panel-body">
+                <ol>
+                    <li ng-repeat="part in bike._parts">
+                        {{part.name}} <a class="btn btn-info btn-sm" ng-href="#/parts/edit/{{part.ID}}">Edytuj</a>
+                    </li>
+                </ol>
+            </div>
+            <div class="panel-footer">
                 <a href="" ng-href="#/bikes/parts/{{bike.ID}}" class="btn btn-info">Dobierz część</a>
                 <a href="" ng-href="#/parts/new/{{bike.ID}}" class="btn btn-primary">Dodaj część</a>
             </div>
         </div>
-
-        <div class="panel-body">
-            <p><strong>Komentarze:</strong></p>
-            <div>
-                <div ng-repeat="comment in bike._comments">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    {{ comment.first_name }} {{ comment.last_name }}
-                                </div>
-                                <div class="col-md-6 text-right">
-                                    {{ comment.date_create | date : 'yyyy-MM-d H:m' }}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel-body">
-                            <p>{{comment.value}}</p>
-                        </div>
-                    </div>
-                </div>
+        <h4>Komentarze</h4>
+        <div>
+            <div ng-repeat="comment in bike._comments">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Dodaj nowy komentarz
+                        <div class="row">
+                            <div class="col-md-6">
+                                {{ comment.first_name }} {{ comment.last_name }}
+                            </div>
+                            <div class="col-md-6 text-right">
+                                {{ comment.date_create | date : 'yyyy-MM-d H:m' }}
+                            </div>
+                        </div>
                     </div>
                     <div class="panel-body">
-                        <div class="form-group">
-                            <textarea type="text" class="form-control" ng-model="new_comment.value"></textarea>
-                        </div>
-                        <div>
-                            <button class="btn btn-primary" ng-click="addComment()">Zapisz</button>
-                        </div>
+                        <p>{{comment.value}}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Dodaj nowy komentarz
+                </div>
+                <div class="panel-body">
+                    <div class="form-group">
+                        <textarea type="text" class="form-control" ng-model="new_comment.value"></textarea>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary" ng-click="addComment()">Zapisz</button>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
