--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -25,7 +25,7 @@
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        {{ comment.first_name }} {{ comment.last_name }}
+                                        {{ comment._first_name }} {{ comment._last_name }}
                                     </div>
                                     <div class="col-md-6 text-right">
                                         {{ comment.date_create | date : 'yyyy-MM-d H:m' }}
