--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -21,6 +21,45 @@ textarea {
     border-radius: 15px;
 }
 
+.ng-invalid.ng-dirty {
+    border-color: #a94442;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+.ng-invalid.ng-dirty:focus {
+    border-color: #843534;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+}
+.ng-invalid.ng-dirty .input-group-addon {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #a94442;
+}
+.ng-invalid.ng-dirty-feedback {
+    color: #a94442;
+}
+
+.ng-valid.ng-dirty {
+    border-color: #3c763d;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+.ng-valid.ng-dirty:focus {
+    border-color: #2b542c;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
+}
+.ng-valid.ng-dirty .input-group-addon {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #3c763d;
+}
+.ng-valid.ng-dirty-feedback {
+    color: #3c763d;
+}
+
+/*
 body.background-1 {
     background-size: cover;
     background: #fff url(src/images/backgrounds/bike-1.jpg) 0 0 no-repeat;
@@ -59,4 +98,4 @@ body.background-7 {
 body.background-8 {
     background-size: cover;
     background: #fff url(src/images/backgrounds/bike-8.jpg) 0 0 no-repeat;
-}
+}*/
