--- a/static/src/templates/parts/edit.html
+++ b/static/src/templates/parts/edit.html
@@ -1,15 +1,17 @@
 <div class="row">
     <div class="col-xs-12" ng-controller="PartsEditCtrl">
-        <div class="form-group">
-            <label for="part_name">Nazwa</label>
-            <input type="text" class="form-control" id="part_name" ng-model="part.name">
-        </div>
-        <div class="form-group">
-            <label for="part_description">Opis</label>
-            <input type="text" class="form-control" id="part_description" ng-model="part.description">
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" ng-click="submit()">Zapisz</button>
-        </div>
+        <form name="editPart">
+            <div class="form-group">
+                <label for="part_name">Nazwa</label>
+                <input type="text" class="form-control" id="part_name" ng-model="part.name" validator="required">
+            </div>
+            <div class="form-group">
+                <label for="part_description">Opis</label>
+                <input type="text" class="form-control" id="part_description" ng-model="part.description" validator="required>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" ng-click="submit()" validation-submit="editPart" >Zapisz</button>
+            </div>
+        </form>
     </div>
 </div>
