route edit form validation

--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -13,7 +13,7 @@
                 <p><strong>Koniec:</strong> {{route.to_dst}}</p>
             </div>
             <div class="panel-footer">
-                <p><strong>Rower</strong> {{route.bike.name}}</p>
+                <p><strong>Rower</strong> {{route._bike.name}}</p>
                 <p><strong>Data</strong> {{route.date_of_ride}}</p>
                 <p><strong>Czas trwania</strong> {{route.duration_of_ride}} min</p>
             </div>
