--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -59,6 +59,9 @@ textarea {
     color: #3c763d;
 }
 
+span > .alert.alert-danger {
+    margin-top: 20px;
+}
 /*
 body.background-1 {
     background-size: cover;
