--- a/static/src/templates/bikes/main.html
+++ b/static/src/templates/bikes/main.html
@@ -5,7 +5,7 @@
             <a href="#/bikes/new" class="btn btn-primary btn-block btn-lg">Dodaj nowy rower</a>
         </div>
 
-        <table class="table table-responsive">
+        <table class="table table-responsive table-hover">
             <tr>
                 <th>Lp</th>
                 <th>Rower</th>
