--- a/static/src/templates/messages/main.html
+++ b/static/src/templates/messages/main.html
@@ -4,7 +4,7 @@
             <a href="#/messages/new" class="btn btn-primary btn-block btn-lg">Dodaj nową wiadomość</a>
         </div>
 
-        <table class="table table-responsive">
+        <table class="table table-responsive table-hover">
             <tr>
                 <th>Lp</th>
                 <th>Od</th>
