--- a/static/src/templates/messages/new.html
+++ b/static/src/templates/messages/new.html
@@ -4,7 +4,7 @@
             <div class="panel panel-info" ng-if="previous_messages">
                 <div class="panel-heading">Poprzednie wiadmości</div>
                 <div class="panel-body">
-                    <table class="table table-responsive">
+                    <table class="table table-responsive table-hover">
                         <tr>
                             <th>Od</th>
                             <th>Treść</th>
