--- a/static/src/templates/routes/main.html
+++ b/static/src/templates/routes/main.html
@@ -5,7 +5,7 @@
             <a href="#/routes/new" class="btn btn-primary btn-block btn-lg">Dodaj nową trasę</a>
         </div>
 
-        <table class="table table-responsive">
+        <table class="table table-responsive table-hover">
             <tr>
                 <th>Lp</th>
                 <th>Trasa</th>
