--- a/static/src/templates/routes/new.html
+++ b/static/src/templates/routes/new.html
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 <h4>Punkty orientacyjne</h4>
-                <table class="table table-responsive">
+                <table class="table table-responsive table-hover">
                     <tr>
                         <th>Lp.</th>
                         <th>Nazwa</th>
