--- a/static/src/templates/parts/new.html
+++ b/static/src/templates/parts/new.html
@@ -7,7 +7,7 @@
             </div>
             <div class="form-group">
                 <label for="part_description">Opis</label>
-                <input type="text" class="form-control" id="part_description" ng-model="part.description" validator="required>
+                <input type="text" class="form-control" id="part_description" ng-model="part.description" validator="required">
             </div>
             <div class="form-group">
                 <button class="btn btn-primary" validation-submit="NewPart" ng-click="submit()">Zapisz</button>
