Deleting parts works

--- a/static/src/templates/bikes/show.html
+++ b/static/src/templates/bikes/show.html
@@ -16,7 +16,7 @@
             </div>
             <div class="panel-footer">
                 <a href="" ng-href="#/bikes/parts/{{bike.ID}}" class="btn btn-info">Dobierz część</a>
-                <a href="" ng-href="#/parts/new/{{bike.ID}}" class="btn btn-primary">Dodaj część</a>
+                <a href="" ng-href="#/parts/new/{{bike.ID}}" class="btn btn-primary">Dodaj nową część</a>
             </div>
         </div>
         <h4>Komentarze</h4>
