--- a/static/src/templates/parts/main.html
+++ b/static/src/templates/parts/main.html
@@ -19,7 +19,7 @@
                 <td>
                     <!--<a ng-href="#/parts/show/{{part.ID}}" class="btn btn-primary">Zobacz</a>-->
                     <a ng-href="#/parts/edit/{{part.ID}}" class="btn btn-info">Edytuj</a>
-                    <!--<a ng-click="delete(part.ID)" class="btn btn-danger">Usuń</a>-->
+                    <a ng-click="delete(part.ID)" class="btn btn-danger">Usuń</a>
                 </td>
             </tr>
         </table>
